# reproduce-dioxus-fullstack-2193

./: Cargo.toml  Dioxus.toml  README.md
src/: main.rs
