[package]
name = "fullstack-test"
version = "0.1.0"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
tokio = { version = "1.37.0", optional = true }

[features]
default = []
server = ["dioxus/axum", "dep:tokio"]
web = ["dioxus/web"]
